# Giflet

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  build_exe.bat  giflet_core.py  pyproject.toml  run.bat  start_web.bat  web_app.py
.github/workflows/: ci.yml  release.yml
tests/: test_core.py
web/: index.html  main.js  style.css
